[package]
name = "wavepool"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
name="wavelib"
path="src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "*"

image = "*"
env_logger = "*"
log = "*"
pollster = "*"
wgpu = "*"

cgmath = "*"

[dependencies.sdl2]
version = "*"
features = ["bundled", "raw-window-handle"]
